# navia-modules

./: .gitignore  .graphifyignore  gemini_comfyui_workflow.json  options.txt  pyproject.toml  sdxl_comfyui_workflow.json  workflow_api.json
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.json
graphify-out/cache/: stat-index.json
src/: config.py  main.py
src/activities/social_story/: batch_test.py  evaluation_pipeline.py  judge.py  main.py  model.py  score_real_social_stories.py  utils.py
src/activities/social_story/evaluation/: algorithmic_analysis.py  deterministic_analysis.py  main.py  probabilistic_analysis.py  readability_analysis.py
src/activities/social_story/scripts/: batch_test.py  evaluate_social_story.py
src/api/: main.py  utils.py
src/entities/: learner.py  therapist.py
src/image_gen/: fanar.py  huggingface.py  main.py  zerogpu.py
src/social_story/: batch_test.py  config.py  llm.py  main.py  model.py  score_real_social_stories.py  test.py  utils.py
src/text_gen/: llm.py
src/wrappers/image_gen/: comfyui.py  gemini.py  main.py  sdxl.py
src/wrappers/image_gen/comfyui/: gemini.py  sdxl.py
src/wrappers/text_gen/: llm.py  main.py
