[project]
name = "navia-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "google-genai>=2.4.0",
    "invisible-watermark>=0.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]

[project.scripts]
social-story = "social_story.main:main"

[tool.uv]
package = true
