[project]
name = "navia-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "cuid2>=2.0.1",
    "diffusers>=0.37.1",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.4.0",
    "gradio-client>=2.5.0",
    "huggingface-hub>=1.15.0",
    "invisible-watermark>=0.2.0",
    "ollama>=0.6.2",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
    "watchdog>=6.0.0",
]

[project.scripts]
social-story = "activities.social_story.main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
